# python-chess4d-oana-chiru

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: autotag.yml  publish-to-pypi.yml
benches/: baseline_phase5.txt  bench_legal_moves.py  phase6_final.txt  phase6b.txt  phase6c.txt
examples/: encode_hello_4d.py
hoodoos/: brokenpaste.md  oana-chiru-2026.xml
scripts/: analyze_issue7_rerun.py  issue7_apples_to_apples_report.md  issue7_rerun_report.md
scripts/binaries/: README.md
src/chess4d/: __init__.py  board.py  corpus.py  errors.py  geometry.py  legality.py  native_encoder.py  spectral.py  startpos.py  state.py  types.py  zobrist.py
src/chess4d/notation/: __init__.py  compact.py  errors.py  json_format.py
src/chess4d/pieces/: __init__.py  _common.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
tests/: conftest.py  test_attacks.py  test_bishop_adjacency.py  test_bishop_moves.py  test_board.py  test_castling.py  test_corpus.py  test_en_passant.py  test_fifty_move.py  test_gamestate.py  test_king_adjacency.py  test_king_moves.py  test_knight_adjacency.py  test_knight_moves.py  test_legal_moves_parity.py  test_legality.py  test_native_encoder.py  test_notation_autodetect.py  test_notation_compact_move.py  test_notation_compact_position.py  test_notation_game.py  test_notation_json.py  test_pawn_adjacency.py  test_pawn_moves.py  test_pawn_promotion.py  test_phase5_interactions.py  test_phase5_smoke.py  test_primitives.py  test_push_pop.py  test_queen_adjacency.py  test_queen_moves.py  test_rook_adjacency.py  test_rook_moves.py  test_rook_push_pop.py  test_smoke_round_trip.py  test_spectral.py  test_startpos.py  test_threefold.py  test_zobrist.py  test_zobrist_incremental.py
