[project]
name = "python-chess4d-oana-chiru"
version = "0.3.3"
description = "Python reference implementation of Oana & Chiru (2026) — A Mathematical Framework for Four-Dimensional Chess (DOI 10.3390/appliedmath6030048)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Unlicense" }
authors = [{ name = "Steven Kirkland" }]
keywords = [
    "chess",
    "4d",
    "four-dimensional-chess",
    "oana-chiru",
    "spectral",
    "research",
    "board-games",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lemonforest/python-chess4d-oana-chiru"
Issues = "https://github.com/lemonforest/python-chess4d-oana-chiru/issues"
Changelog = "https://github.com/lemonforest/python-chess4d-oana-chiru/blob/main/CHANGELOG.md"
Paper = "https://doi.org/10.3390/appliedmath6030048"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "ruff>=0.4",
]
spectral = [
    # chess-spectral — 45 056-dim 4D encoder + spectralz v4 frame format.
    # Pinned at ``>=1.2.3`` to pick up two upstream changes at once:
    #
    # 1. The D₄×Z₂ B1/B2 character-table correctness fix (landed in
    #    1.2.2) — the bug that broke projector idempotence and
    #    corrupted the B1/B2 channel contributions of the
    #    45 056-dim 4D encoding. See CHANGELOG [0.3.3].
    # 2. The lazy-import fix for ``phase_operators.occupation_field``
    #    (landed in 1.2.3) — 1.2.2's ``chess_spectral/__init__.py``
    #    eagerly imported that module, which unconditionally did
    #    ``import chess`` (python-chess 2D library). 1.2.3 defers the
    #    import until it's actually needed, so 4D-only consumers no
    #    longer pay for a ``python-chess`` transitive dep.
    "chess-spectral>=1.2.3",
]

[project.scripts]
chess4d-corpus-gen = "chess4d.corpus:main"
chess4d-corpus-encode = "chess4d.corpus:encode_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess4d"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist — hatchling's default sdist globs the filesystem,
# which would otherwise pull in .claude/, smoke/ scratch output, the
# hoodoos/ source-paper PDF, CLAUDE.md, benches/, etc. Keep the
# uploaded tarball minimal: source + user-facing docs only.
include = [
    "/src/chess4d",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: exercises the unoptimized legal_moves hot path (run explicitly with '-m slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/chess4d"]
